salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/Compliance_Verification_Source__mdt.object-meta.xml
<CustomObject>
    <description>The compliance document type this verification source applies to. Must match the document_type values used by Compliance_Requirement__mdt and the AI extraction (e.g. &quot;IATF 16949 Certificate&quot;, &quot;OSHA 10 Card&quot;, &quot;ISO 9001 Certificate&quot;).</description>
    <label>Compliance Verification Source</label>
    <pluralLabel>Compliance Verification Sources</pluralLabel>
</CustomObject>