salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/API_Cert_Number_Source__c.field-meta.xml
<CustomField>
    <fullName>API_Cert_Number_Source__c</fullName>
    <description>Name of the extracted_fields key that contains the lookup identifier (e.g. &quot;certificate_number&quot;). The verification service reads this field from Raw_Response__c to populate the {cert_number} placeholder in API_Endpoint_Template__c.</description>
    <label>API Cert Number Source Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>