salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/API_Endpoint_Template__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_Template__c</fullName>
    <description>URL template for the authoritative API call. Use {cert_number} as a placeholder for the extracted certificate number. Should be a Named Credential reference (callout:NamedCred/path) so auth headers are injected automatically. Empty when no API exists.</description>
    <label>API Endpoint Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>