salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/API_Result_Mapping__c.field-meta.xml
<CustomField>
    <fullName>API_Result_Mapping__c</fullName>
    <description>JSON describing how to interpret the API response. Specifies which response field holds the status, name, country, etc. Example: {&quot;status_field&quot;:&quot;certStateName&quot;,&quot;name_field&quot;:&quot;name&quot;,&quot;country_field&quot;:&quot;country&quot;,&quot;cert_number_field&quot;:&quot;certNo&quot;}. Lets the service handle different APIs without code changes.</description>
    <label>API Result Mapping</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>