salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/API_Valid_States__c.field-meta.xml
<CustomField>
    <fullName>API_Valid_States__c</fullName>
    <description>Comma-separated list of status values from the API that mean &quot;the certificate is currently valid&quot;. Anything not in this list is treated as invalid and the document status is forced to Rejected. Example for IATF: &quot;Valid,Active,Certified&quot;. For OFAC sanctions: leave blank, since any match means non-compliant.</description>
    <label>API Valid States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>