salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Issuing authority or standard body</description>
    <label>Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>