salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of document this verification source handles</description>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>