salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>Instructions for using this verification source</description>
    <label>Instructions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>