salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about this verification source</description>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>