salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Search_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Search_Parameters__c</fullName>
    <description>JSON array of search parameter names</description>
    <label>Search Parameters</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>