salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <description>Method of verification (API, Manual, etc.)</description>
    <label>Verification Method</label>
    <length>254</length>
    <type>Text</type>
</CustomField>