salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Verification_Name__c.field-meta.xml
<CustomField>
    <fullName>Verification_Name__c</fullName>
    <description>Name of verification source</description>
    <label>Verification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>