salesforce/force-app/main/default/objects/Compliance_Verification_Source__mdt/fields/Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Verification_URL__c</fullName>
    <description>URL of verification portal or API</description>
    <label>Verification URL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>